--- a/faq.html
+++ b/faq.html
@@ -133,7 +133,7 @@
                 </div>
                 <div class="col col-md-4 footer-mid">
                     Broncode te vinden op GitHub
-                    <a href="https://github.com/openknowledgebe/AppsForXLight" target="_blank"> <i class="fa fa-github fa-2x footlogo"> </i> </a>
+                    <a href="https://github.com/SimonGoderis/simongoderis.github.io" target="_blank"> <i class="fa fa-github fa-2x footlogo"> </i> </a>
                 </div>
                 <div class="col col-md-4 footer-right">
                     <!-- <a href="https://twitter.com/yourtwitter" target="_blank" ><i class="fa fa-twitter fa-2x"></i></a>
