--- a/timer.html
+++ b/timer.html
@@ -1,9 +1,17 @@
-<link href="http://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet" type="text/css">
-<link href="/css/timer.css" type="stylesheet">
+<!DOCTYPE html>
+<html>
 
-<header></header>
-<section>
-  <div class="wrapper">
+<head>
+    <meta charset="utf-8">
+    <title>Foreplay Conferentie</title>
+    <!-- Meta tags -->
+   <link href="http://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet" type="text/css">
+<link href="/css/timer.css" type="stylesheet">
+    
+</head>
+
+<body>
+ <div class="wrapper">
 
     <hgroup>
       <h1>Countdown</h1>
@@ -27,15 +35,19 @@
         <p class="numbers seconds">00</p><br>
         <p class="strings timeRefSeconds">Seconds</p>
       </div>
-    </div>
-    <!-- end div#countdown -->
-
-    <footer>
+   </div></div>
+  <footer>
       <p>Hey, how are you doing? This countdown ends on <strong>July 31st 2016</strong>. Go to the bottom of the JS file and change it to whatever you want :)</p>
       <br>
 
     </footer>
 <script src="js/timer.js"></script>
-  </div>
-  <!-- end div.wrapper -->
-</section>
+</body>
+
+</html>
+
+
+
+
+
+
