Changed Navbar COC

--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
 
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#top">OVER</a></li> -->
+                    <li><a href="#top">OVER</a></li>
                     <li><a href="#site-info">KEYNOTES</a></li>
                     <li><a href="#site-programme">PROGRAMMA</a></li>
-                    <li><a href="faq.html">CODE OF CONDUCT</a></li>
+                    <!--<li><a href="faq.html">CODE OF CONDUCT</a></li>-->
                     <li><a class="cta" href="#site-register">INSCHRIJVEN</a></li>
                 </ul>
             </div>
