Added main body content

--- a/index.html
+++ b/index.html
@@ -135,14 +135,20 @@
                                 FOREPLAY CONFERENTIE
                             </h1>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ultricies congue urna rhoncus aliquet. Pellentesque pulvinar efficitur orci. Aliquam in magna leo.
+                              Foreplay onderzoekt, inspireert en durft kritisch zijn over de toekomst van mens, technologie en samenleving in Gent.
                             </p>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ultricies congue urna rhoncus aliquet. Pellentesque pulvinar efficitur orci. Aliquam in magna leo.
+                              Foreplay gaat over de toekomst van Gent. Beter gezegd, over verschillende mogelijke toekomsten. Want wat we vandaag beslissen, maakt mee de stad van morgen. Hoe willen we dat onze stad er uitziet, bijvoorbeeld in 2040?
+                            </p>
+                            <p>
+                              Foreplay gaat over technologie, met al haar kansen, beperkingen en bedreigingen voor Gent en haar inwoners. Welke technologie willen we graag in ons leven, en welke liever niet?                            </p>
+                            </p>
+                            <p>
+                              Foreplay gaat over ‘Gent, City of People’: een ecosysteem waarbinnen overheid, ondernemingen, universiteit én burgers samen werken aan en experimenteren met de stad van de toekomst. Hoe blijven we als stad voldoende innovatief en ‘future proof’? Hoe houden we tegelijkertijd iedereen aan boord? En hoe zou de overheid van de toekomst er kunnen uitzien?
                             </p>
                             <br>
                             <p class="extra-spacing">
-                                <strong><a href="#" class="ctabanner">schrijf je direct in</a></strong>
+                                <strong><a href="#" class="ctabanner">registreer hier</a></strong>
                             </p>
                             <br>
                         </div>
