Turn off Modals for speaker description

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                             <a data-toggle="modal" data-target="#spreker3"><img src="http://placehold.it/200x200"></a>
                             <a data-toggle="modal" data-target="#spreker4"><img src="http://placehold.it/200x200"></a>
                         </div>
-                        <!-- sprekers modals-->
+                        <!-- sprekers modals
                         <div class="modal fade" id="spreker1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
@@ -253,7 +253,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <br>
                         <h2 class="text-center text-yellow">INFORMATIE</h2>
                     </div>
