Turn off modal on pictures

--- a/index.html
+++ b/index.html
@@ -176,10 +176,10 @@
                     <div class="col-md-12">
                         <h2 class="text-center text-yellow">SPREKERS</h2>
                         <div class="partner-logos">
-                            <a data-toggle="modal" data-target="#spreker1"><img src="assets/pictures/kc.jpg" height="200px"></a>
-                            <a data-toggle="modal" data-target="#spreker2"><img src="assets/pictures/haj.jpg" height="200px"></a>
-                            <a data-toggle="modal" data-target="#spreker3"><img src="http://placehold.it/200x200"></a>
-                            <a data-toggle="modal" data-target="#spreker4"><img src="http://placehold.it/200x200"></a>
+                            <!--<a data-toggle="modal" data-target="#spreker1">--><img src="assets/pictures/kc.jpg" height="200px"></a>
+                            <!--<a data-toggle="modal" data-target="#spreker2">--><img src="assets/pictures/haj.jpg" height="200px"></a>
+                            <!--<a data-toggle="modal" data-target="#spreker3">--><img src="http://placehold.it/200x200"></a>
+                            <!--<a data-toggle="modal" data-target="#spreker4">--><img src="http://placehold.it/200x200"></a>
                         </div>
                         <!-- sprekers modals
                         <div class="modal fade" id="spreker1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
