Adjusted modals speakers

--- a/index.html
+++ b/index.html
@@ -174,25 +174,27 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h2 class="text-center text-yellow">SPREKERS</h2>
+                        <h2 class="text-center text-yellow">KEYNOTE SPREKERS</h2>
                         <div class="partner-logos">
-                            <!--<a data-toggle="modal" data-target="#spreker1">--><img src="assets/pictures/kc.jpg" height="200px"></a>
-                            <!--<a data-toggle="modal" data-target="#spreker2">--><img src="assets/pictures/haj.jpg" height="200px"></a>
-                            <!--<a data-toggle="modal" data-target="#spreker3">--><img src="http://placehold.it/200x200"></a>
-                            <!--<a data-toggle="modal" data-target="#spreker4">--><img src="http://placehold.it/200x200"></a>
+                            <a data-toggle="modal" data-target="#spreker1"><img src="assets/pictures/kc.jpg" height="200px"></a>
+                          <!--  <a data-toggle="modal" data-target="#spreker2"><img src="http://placehold.it/200x200" height="200px"></a>
+                            <a data-toggle="modal" data-target="#spreker3"><img src="http://placehold.it/200x200" height="200px"></a> -->
+                            <a data-toggle="modal" data-target="#spreker4"><img src="assets/pictures/haj.jpg" height="200px"></a>
                         </div>
-                        <!-- sprekers modals
+                        <!-- sprekers modals-->
                         <div class="modal fade" id="spreker1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                        <h4 class="modal-title" id="myModalLabel">Spreker 1</h4>
+                                        <h4 class="modal-title" id="myModalLabel">Karl-Filip Coenegrachts - Strategisch Coördinator Groep Gent</h4>
                                     </div>
                                     <div class="modal-body">
-                                        <p>Uitleg spreker 1</p>
                                         <p>
-                                            So, too, with some other feeding grounds, where he had at times revealed himself. But all these seemed only his casual stopping-places and ocean-inns, so to speak, not his places of prolonged abode. And where Ahab's chances of accomplishing his object have hitherto been spoken of, allusion has only been made to whatever way-side, antecedent, extra prospects were his, ere a particular set time or place were attained, when all possibilities would become probabilities, and, as Ahab fondly thought, every possibility the next thing to a certainty. That particular set time and place were conjoined in the one technical phrase&mdash;the Season-on-the-Line.
+                                            Karl-Filip Coenegrachts is Strategisch Coördinator voor Groep Gent, trekker van de visie ‘Ghent, City of People’ en van het Ghent Living Lab.
+                                        </p>
+                                        <p>
+                                            Karl-Filip Coenegrachts stelt de huidige smart-city visie van de stad voor. In die visie staan de noden van de Gentse burgers centraal, en is technologie een middel om hieraan tegemoet te komen. Daarnaast spreekt hij ook over de rol van de overheid, en haar relatie met technologie en samenleving.
                                         </p>
                                     </div>
                                     <div class="modal-footer">
@@ -200,7 +202,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="modal fade" id="spreker2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                  <!--      <div class="modal fade" id="spreker2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header">
@@ -235,25 +237,27 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div>-->
                         <div class="modal fade" id="spreker4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                        <h4 class="modal-title" id="myModalLabel">Spreker 4</h4>
+                                        <h4 class="modal-title" id="myModalLabel">Professor Maarten Haijer</h4>
                                     </div>
                                     <div class="modal-body">
-                                        <p>Uitleg spreker 4</p>
                                         <p>
-                                            So, too, with some other feeding grounds, where he had at times revealed himself. But all these seemed only his casual stopping-places and ocean-inns, so to speak, not his places of prolonged abode. And where Ahab's chances of accomplishing his object have hitherto been spoken of, allusion has only been made to whatever way-side, antecedent, extra prospects were his, ere a particular set time or place were attained, when all possibilities would become probabilities, and, as Ahab fondly thought, every possibility the next thing to a certainty. That particular set time and place were conjoined in the one technical phrase&mdash;the Season-on-the-Line.
+                                            Dr. Maarten Hajer is politicoloog en hoogleraar Urban Futures aan de Universiteit van Utrecht. Hij is de auteur van het boek ‘Smart about Cities’ waarin hij pleit voor een ‘smart urbanism’: een systeem waarin steden wereldwijd genetwerkt zijn om samen te experimenteren, te leren en actie te ondernemen. Prof. Hajer pleit voor het gebruik van technologie voor sociale innovatie van onderuit, als reactie op het adopteren van technologie die ons opgedrongen wordt door grote bedrijven.
+                                        </p>
+                                        <p>
+                                            Prof. Hajer sluit het voormiddaggedeelte af met een presentatie over de toekomst van steden, waarin hij ook zal reageren op de boodschap van de vorige sprekers.
                                         </p>
                                     </div>
                                     <div class="modal-footer">
                                     </div>
                                 </div>
                             </div>
-                        </div> -->
+                        </div>
                         <br>
                         <h2 class="text-center text-yellow">INFORMATIE</h2>
                     </div>
