--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                             </div>
                         </div>
                         <br>
-                        <h2 class="text-center text-yellow">INFORMATIE</h2>
+                      <!--  <h2 class="text-center text-yellow">INFORMATIE</h2>
                     </div>
                 </div>
                 <div class="row info-cards extra-spacing">
@@ -294,7 +294,7 @@
                         </div>
                     </div>
                 </div>
-                <!--
+
     PARTNERS PART
 -->
 
@@ -344,6 +344,7 @@
     <div id="site-programme" class="section bg-gradient">
         <div class="container">
             <h2 class="text-center text-blue">PROGRAMMA</h2>
+            <p>HET DEFINITIEVE PROGRAMMA ZAL LATER WORDEN TOEGEVOEGD</p>
             <div class="row">
                 <div class="col-md-6 col-xs-12 timetable">
                     <div class="row">
@@ -351,7 +352,7 @@
                             <h4 class="no-uppercase text-azg">09:00</h4>
                         </div>
                         <div class="col-xs-9">
-                            <span>Verwelkoming</span>
+                            <span>Verwelkoming door Schepen Martine De Regge</span>
                         </div>
                     </div>
                     <div class="row">
@@ -359,7 +360,7 @@
                             <h4 class="no-uppercase text-azg">9:20</h4>
                         </div>
                         <div class="col-xs-9">
-                            <span>Futureproof City of People door Karl-Filip Coenegrachts</span>
+                            <span>Keynote door Aral Balkan </span>
                         </div>
                     </div>
                     <div class="row">
@@ -367,7 +368,7 @@
                             <h4 class="no-uppercase text-azg">10:00</h4>
                         </div>
                         <div class="col-xs-9">
-                            <span>Radicals! door Jamie Bartlett</span>
+                            <span>Keynote door de mysterieuze spreker</span>
                         </div>
                     </div>
                     <div class="row">
@@ -384,7 +385,7 @@
                             <h4 class="no-uppercase text-azg">11:10</h4>
                         </div>
                         <div class="col-xs-9">
-                            <span>Techno-optimist</span>
+                            <span>‘Ghent, City of People’, door Karl-Filip Coenegrachts</span>
                         </div>
                     </div>
                 </div>
@@ -395,7 +396,7 @@
                             <h4 class="no-uppercase text-azg">11:50</h4>
                         </div>
                         <div class="col-xs-9">
-                            <span>Reflectie door prof. Maarten Hajer</span>
+                            <span>Welke toekomst voor steden?, door prof. dr. Maarten Hajer</span>
                         </div>
                     </div>
                     <div class="row">
@@ -428,6 +429,14 @@
                         </div>
                         <div class="col-xs-9">
                             <span>Keuze 2 - fireside chats</span>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-3">
+                            <h4 class="no-uppercase text-azg">15:00</h4>
+                        </div>
+                        <div class="col-xs-9">
+                            <span>Netwerk drink</span>
                         </div>
                     </div>
                 </div>
