Added H4 to the programme

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <li><a href="#site-info">KEYNOTES</a></li>
                     <li><a href="#site-programme">PROGRAMMA</a></li>
                     <!--<li><a href="faq.html">CODE OF CONDUCT</a></li>-->
-                    <li><a class="cta" href="#site-register">INSCHRIJVEN</a></li>
+                    <li><a class="cta" href="https://foreplaygent.eventbrite.nl">INSCHRIJVEN</a></li>
                 </ul>
             </div>
             <!--/.nav-collapse -->
@@ -148,7 +148,7 @@
                             </p>
                             <br>
                             <p class="extra-spacing">
-                                <strong><a href="#" class="ctabanner">registreer hier</a></strong>
+                                <strong><a href="https://foreplaygent.eventbrite.nl" class="ctabanner">registreer hier</a></strong>
                             </p>
                             <br>
                         </div>
@@ -344,7 +344,7 @@
     <div id="site-programme" class="section bg-gradient">
         <div class="container">
             <h2 class="text-center text-blue">PROGRAMMA</h2>
-            <p>HET DEFINITIEVE PROGRAMMA ZAL LATER WORDEN TOEGEVOEGD</p>
+            <h4>HET DEFINITIEVE PROGRAMMA ZAL LATER WORDEN TOEGEVOEGD</h4>
             <div class="row">
                 <div class="col-md-6 col-xs-12 timetable">
                     <div class="row">
@@ -454,11 +454,11 @@
                         <div class="col col-xs-10 col-xs-offset-1">
                             <h2 class="">Wil jij er ook bijzijn?</h2>
                             <h4>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ultricies congue urna rhoncus aliquet. Pellentesque pulvinar efficitur orci. Aliquam in magna leo. Proin luctus enim sed odio consequat, sed feugiat metus sollicitudin.
+                              Registratie is gratis maar verplicht.
                             </h4>
                             <br>
                             <br>
-                            <strong><a class="cta2" href="#" target="_blank">SCHRIJF JE NU IN!</a></strong>
+                            <strong><a class="cta2" href="https://foreplaygent.eventbrite.nl" target="_blank">SCHRIJF JE NU IN!</a></strong>
                             <br><br>
                         </div>
                     </div>
