--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 -->
     <div id="site-intro">
         <div class="section bg-gradient">
-            <div class="container fullpage" style="padding-top: 50px">
+            <div class="container fullpage" style="padding-top: 30px">
                 <div class="row">
                     <div class="col-xs-12">
                         <div class="col-xs-9 col-sm-9 text-big">
@@ -541,7 +541,7 @@
                 </div>
                 <div class="col col-md-4 footer-mid">
                     Broncode te vinden op GitHub
-                    <a href="https://github.com/SimonGoderis/simongoderis.github.io" target="_blank"> <i class="fa fa-github fa-2x footlogo"> </i> </a>
+                    <a href="https://github.com/PieterJanPauwels/Foreplay.gent" target="_blank"> <i class="fa fa-github fa-2x footlogo"> </i> </a>
                 </div>
                 <div class="col col-md-4 footer-right">
                     <!-- <a href="https://twitter.com/yourtwitter" target="_blank" ><i class="fa fa-twitter fa-2x"></i></a>
