--- a/index.html
+++ b/index.html
@@ -140,12 +140,6 @@
                             <p>
                               Foreplay gaat over de toekomst van Gent. Beter gezegd, over verschillende mogelijke toekomsten. Want wat we vandaag beslissen, maakt mee de stad van morgen. Hoe willen we dat onze stad er uitziet, bijvoorbeeld in 2040?
                             </p>
-                            <p>
-                              Foreplay gaat over technologie, met al haar kansen, beperkingen en bedreigingen voor Gent en haar inwoners. Welke technologie willen we graag in ons leven, en welke liever niet?                            </p>
-                            </p>
-                            <p>
-                              Foreplay gaat over ‘Gent, City of People’: een ecosysteem waarbinnen overheid, ondernemingen, universiteit én burgers samen werken aan en experimenteren met de stad van de toekomst. Hoe blijven we als stad voldoende innovatief en ‘future proof’? Hoe houden we tegelijkertijd iedereen aan boord? En hoe zou de overheid van de toekomst er kunnen uitzien?
-                            </p>
                             <br>
                             <p class="extra-spacing">
                                 <strong><a href="https://foreplaygent.eventbrite.nl" class="ctabanner">registreer hier</a></strong>
@@ -344,7 +338,7 @@
     <div id="site-programme" class="section bg-gradient">
         <div class="container">
             <h2 class="text-center text-blue">PROGRAMMA</h2>
-            <h4>HET DEFINITIEVE PROGRAMMA ZAL LATER WORDEN TOEGEVOEGD</h4 >
+            <h4 class="text-center">HET DEFINITIEVE PROGRAMMA ZAL LATER WORDEN TOEGEVOEGD</h4 >
             <div class="row">
                 <div class="col-md-6 col-xs-12 timetable">
                     <div class="row">
