--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#top">OVER</a></li>
-                    <li><a href="#site-info">KEYNOTES</a></li>
+                    <li><a href="#site-info">SPREKERS</a></li>
                     <li><a href="#site-programme">PROGRAMMA</a></li>
                     <!--<li><a href="faq.html">CODE OF CONDUCT</a></li>-->
                     <li><a class="cta" href="https://foreplaygent.eventbrite.nl">INSCHRIJVEN</a></li>
