Nieuwe blok bij geplaatst

--- a/index.html
+++ b/index.html
@@ -57,9 +57,7 @@
 </head>
 
 <body>
-    <!--
-    NAVIGATION
--->
+    <!--NAVIGATION-->
     <nav class="navbar">
         <div class="nav-container">
             <div class="navbar-header">
@@ -87,7 +85,7 @@
     <!--
     INTRO BLOCK
 -->
-    <!--
+
         <div id="site-intro" class="section text-center bg-white">
             <div class="container">
                 <div class="row">
@@ -121,7 +119,7 @@
                 </div>
             </div>
         </div>
-        -->
+      
     <!--
     ABOUT BLOCK
 -->
