--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 </div>
             </div>
         </div>
-    -->  
+    -->
     <!--
     ABOUT BLOCK
 -->
@@ -404,7 +404,7 @@
                             <h4 class="no-uppercase text-azg">13:30</h4>
                         </div>
                         <div class="col-xs-9">
-                            <span>Keuze 1 - fireside chats</span>
+                            <span>Sessies 1</span>
                         </div>
                     </div>
                     <div class="row">
@@ -420,7 +420,7 @@
                             <h4 class="no-uppercase text-azg">15:00</h4>
                         </div>
                         <div class="col-xs-9">
-                            <span>Keuze 2 - fireside chats</span>
+                            <span>Sessies 2</span>
                         </div>
                     </div>
                     <div class="row">
