Added Urls to speakers

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                             <h4 class="no-uppercase text-azg">9:20</h4>
                         </div>
                         <div class="col-xs-9">
-                            <span>Keynote door Aral Balkan </span>
+                            <span>Keynote door <a href="https://ar.al" target="_blank">Aral Balkan</a> </span>
                         </div>
                     </div>
                     <div class="row">
@@ -360,7 +360,7 @@
                             <h4 class="no-uppercase text-azg">10:00</h4>
                         </div>
                         <div class="col-xs-9">
-                            <span>Keynote door de mysterieuze spreker</span>
+                            <span>Keynote spreker 2</span>
                         </div>
                     </div>
                     <div class="row">
@@ -388,7 +388,7 @@
                             <h4 class="no-uppercase text-azg">11:50</h4>
                         </div>
                         <div class="col-xs-9">
-                            <span>Welke toekomst voor steden?, door prof. dr. Maarten Hajer</span>
+                            <span>Welke toekomst voor steden?, door <a href="http://www.maartenhajer.nl/" target="_blank">prof. dr. Maarten Hajer</a></span>
                         </div>
                     </div>
                     <div class="row">
