Added click for more info

--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h2 class="text-center text-yellow">KEYNOTE SPREKERS</h2>
+                        <h4 class="text-center text-yellow">KLIK VOOR MEER INFORMATIE</h4>
                         <div class="partner-logos">
                             <a data-toggle="modal" data-target="#spreker1"><img src="assets/pictures/kc.jpg" height="200px"></a>
                           <!--  <a data-toggle="modal" data-target="#spreker2"><img src="http://placehold.it/200x200" height="200px"></a>
@@ -352,7 +353,7 @@
                             <h4 class="no-uppercase text-azg">9:20</h4>
                         </div>
                         <div class="col-xs-9">
-                            <span>Keynote door <a href="https://ar.al" target="_blank">Aral Balkan</a> </span>
+                            <span>Keynote door Aral Balkan </span>
                         </div>
                     </div>
                     <div class="row">
@@ -388,7 +389,7 @@
                             <h4 class="no-uppercase text-azg">11:50</h4>
                         </div>
                         <div class="col-xs-9">
-                            <span>Welke toekomst voor steden?, door <a href="http://www.maartenhajer.nl/" target="_blank">prof. dr. Maarten Hajer</a></span>
+                            <span>Welke toekomst voor steden?, door prof. dr. Maarten Hajer</span>
                         </div>
                     </div>
                     <div class="row">
