--- a/index.html
+++ b/index.html
@@ -445,10 +445,8 @@
                 <div class="col-xs-offset-1 col-xs-10 ">
                     <div class="row">
                         <div class="col col-xs-10 col-xs-offset-1">
-                            <h2 class="">Wil jij er ook bijzijn?</h2>
-                            <h4>
-                              Registratie is gratis maar verplicht.
-                            </h4>
+                            <h2 class="text-center text-yellow">Wil jij er ook bijzijn?</h2>
+                            <h4 class="text-center text-yellow"> Registratie is gratis maar verplicht.</h4>
                             <br>
                             <br>
                             <strong><a class="cta2" href="https://foreplaygent.eventbrite.nl" target="_blank">SCHRIJF JE NU IN!</a></strong>
