Teksten en programma toegevoegd.

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 -->
     <div id="site-intro">
         <div class="section bg-gradient">
-            <div class="container fullpage" style="padding-top: 30px">
+            <div class="container">
                 <div class="row">
                     <div class="col-xs-12">
                         <div class="col-xs-9 col-sm-9 text-big">
@@ -154,6 +154,49 @@
                             <span class="info-small">De Bijloke</span>
                             <span class="info-small">Jozef Kluyskensstraat 2<br>9000 - Gent</span>
                             <br>
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                    <h2 class="text-center text-blue">Sprekers voormiddag</h2>
+                    <div class="row info-cards extra-spacing">
+                        <div class="col-md-4 col-xs-12">
+                            <div class="card-white">
+                                <h3 class="text-blue">Aral Balkan</h3>
+                                <p>
+                                    Op Foreplay kijken we in de spiegel. <b>Aral Balkan</b>, cyberactivist en ethisch ondernemer, confronteert ons met hoe we vandaag omgaan met technologie en met onze persoonlijke data. Facebook en Google worden er rijk en slimmer door. Maar willen we dat wel? Hoe zou de toekomst zijn, wanneer we zo verder doen? Wat kan anders?
+                                </p>
+                                <h3 class="text-blue">Karl-Filip Coenegrachts</h3>
+                                <p>Tegenwoordig is het modewoord ‘Smart City’. De Gentse visie daarop is die van de ‘City of People’: mensen centraal, niet sensoren. Op Foreplay vertelt Karl Filip Coenegrachts, Strategisch Coördinator van Groep Gent, wat die visie voor u betekent; als ambtenaar, ondernemer, academicus en burger. We presenteren er een toekomstvisie op de slimme stad. 
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-xs-12">
+                            <div class="card-white">
+                               <h3 class="text-blue">Maya Van Leemput</h3>
+                                <p>
+                                   Is alles wat technologie mogelijk maakt ook wenselijk? Wat is onze toegevoegde waarde als mens in een samenleving waarin we steeds meer kunnen uitbesteden aan technologie? Maya Van Leemput, coördinator van Applied Futures Research, toont het belang van toekomstdenken in de ‘vierde industriële revolutie’.
+                                </p>
+                                <h3 class="text-blue">prof. Maarten Hajer</h3>
+                                <p>
+                                    Op Foreplay verkennen we mogelijke strategieën om in te pluggen op het ecosysteem vol plannen en ideeën dat de stad eigenlijk is. We bedenken pistes om die samenwerking vanuit de overheid mee uit te bouwen. Prof. Maarten Hajer, coördinator van Urban Futures, geeft zijn visie op het belang van duurzaam, ethisch en sociaal ondernemerschap in het ecosysteem van de stad van de toekomst.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-xs-12">
+                            <div class="card-white">
+                                <h3 class="text-blue">Namiddagsessies</h3>
+                                <p>
+                                    In de namiddag gaan we, in lijn met de filosofie van de City of People, samen aan de slag. Lokale stakeholders zullen hun plan van aanpak pitchen voor een toekomstig probleem voor Gent: klimaat, onderwijs, superdiversiteit, efficiënt gebruik van ruimte, wonen, zorg, sociale cohesie, participatie… komen aan bod. In kleinere groepen gaan we interactief, en onder begeleiding van experts, aan de slag om zelf met oplossingen te komen. 
+                                </p>
+                                <p>
+                                    Tijdens de conferentie kan u zich ook kandidaat stellen om mee te stappen in een ‘Future Scripting’-traject, waarbij we via innovatieve gamification-methoden en creatieve oefeningen vier verschillende mogelijke scenario’s over mogelijke toekomsten van Gent zullen schrijven. De oefening wordt begeleid door het team van Maya Van Leemput. 
+ 
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -252,7 +295,7 @@
                             </div>
                         </div>
                         <br>
-                      <!--  <h2 class="text-center text-yellow">INFORMATIE</h2>
+                     <!-- <h2 class="text-center text-yellow">INFORMATIE</h2>
                     </div>
                 </div>
                 <div class="row info-cards extra-spacing">
@@ -288,8 +331,7 @@
                     </div>
                 </div>
 
-    PARTNERS PART
--->
+    PARTNERS PART-->
 
                 <br>
             </div>
@@ -446,7 +488,8 @@
                     <div class="row">
                         <div class="col col-xs-10 col-xs-offset-1">
                             <h2 class="text-center text-yellow">Wil jij er ook bijzijn?</h2>
-                            <h4 class="text-center text-yellow"> Registratie is gratis maar verplicht.</h4>
+                            <p class="text-center"> Foreplay richt zich op de hele City of People. We verwelkomen collega’s van bij Stad, OCMW, Digipolis, Mobiliteitsbedrijf, Brandweer, Politie, Musea, IVAGO, AGB’s en alle andere leden. Daarnaast zijn ook ondernemers, academici en alle andere burgers welkom. Kortom: iedereen die verliefd is op Gent, en wil meewerken aan de toekomst van de stad! </p>
+                            <p class="text-center">Registratie is gratis maar verplicht.</p>
                             <br>
                             <br>
                             <strong><a class="cta2" href="https://foreplaygent.eventbrite.nl" target="_blank">SCHRIJF JE NU IN!</a></strong>
