--- a/index.html
+++ b/index.html
@@ -384,18 +384,26 @@
                 <div class="col-md-6 col-xs-12 timetable">
                     <div class="row">
                         <div class="col-xs-3">
-                            <h4 class="no-uppercase text-azg">09:00</h4>
+                            <h4 class="no-uppercase text-azg">08:30</h4>
                         </div>
                         <div class="col-xs-9">
-                            <span>Verwelkoming door Schepen Martine De Regge</span>
+                            <span>Onthaal met koffie</span>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-xs-3">
-                            <h4 class="no-uppercase text-azg">9:20</h4>
+                            <h4 class="no-uppercase text-azg">9:00</h4>
                         </div>
                         <div class="col-xs-9">
-                            <span>Keynote door Aral Balkan </span>
+                            <span>Verwelkoming door Burgemeester Daniël Termont en Schepen Martine De Regge</span>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-3">
+                            <h4 class="no-uppercase text-azg">09:15</h4>
+                        </div>
+                        <div class="col-xs-9">
+                            <span>Keynote: Aral Balkan</span>
                         </div>
                     </div>
                     <div class="row">
@@ -403,7 +411,7 @@
                             <h4 class="no-uppercase text-azg">10:00</h4>
                         </div>
                         <div class="col-xs-9">
-                            <span>Keynote spreker 2</span>
+                            <span>Keynote: Karl-Filip Coenegrachts</span>
                         </div>
                     </div>
                     <div class="row">
@@ -411,16 +419,15 @@
                             <h4 class="no-uppercase text-azg">10:40</h4>
                         </div>
                         <div class="col-xs-9">
-                            <span>Pauze (30min)</span>
+                            <span>KOFFIEPAUZE</span>
                         </div>
                     </div>
-
                     <div class="row">
                         <div class="col-xs-3">
                             <h4 class="no-uppercase text-azg">11:10</h4>
                         </div>
                         <div class="col-xs-9">
-                            <span>‘Ghent, City of People’, door Karl-Filip Coenegrachts</span>
+                            <span>Keynote: Maya Van Leemput</span>
                         </div>
                     </div>
                 </div>
@@ -431,7 +438,7 @@
                             <h4 class="no-uppercase text-azg">11:50</h4>
                         </div>
                         <div class="col-xs-9">
-                            <span>Welke toekomst voor steden?, door prof. dr. Maarten Hajer</span>
+                            <span>Keynote: prof. Maarten Hajer</span>
                         </div>
                     </div>
                     <div class="row">
@@ -439,7 +446,7 @@
                             <h4 class="no-uppercase text-azg">12:30</h4>
                         </div>
                         <div class="col-xs-9">
-                            <span>Network lunch</span>
+                            <span>LUNCH</span>
                         </div>
                     </div>
                     <div class="row">
@@ -447,31 +454,31 @@
                             <h4 class="no-uppercase text-azg">13:30</h4>
                         </div>
                         <div class="col-xs-9">
-                            <span>Sessies 1</span>
+                            <span>Pitches: uitdagingen voor de toekomst</span>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-xs-3">
-                            <h4 class="no-uppercase text-azg">14:30</h4>
+                            <h4 class="no-uppercase text-azg">14:45</h4>
                         </div>
                         <div class="col-xs-9">
-                            <span>Pauze (30min)</span>
+                            <span>KOFFIEPAUZE</span>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-xs-3">
-                            <h4 class="no-uppercase text-azg">15:00</h4>
+                            <h4 class="no-uppercase text-azg">15:15</h4>
                         </div>
                         <div class="col-xs-9">
-                            <span>Sessies 2</span>
+                            <span>Co-creatieve workshops</span>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-xs-3">
-                            <h4 class="no-uppercase text-azg">15:00</h4>
+                            <h4 class="no-uppercase text-azg">16:30</h4>
                         </div>
                         <div class="col-xs-9">
-                            <span>Netwerk drink</span>
+                            <span>Afsluitende netwerkreceptie</span>
                         </div>
                     </div>
                 </div>
